--- a/style.css
+++ b/style.css
@@ -163,6 +163,8 @@ html.lenis {
   display: flex;
   align-items: center;
   position: fixed;
+  background-color: var(--bg);
+  top: 0;
 }
 
 .navbar img {
@@ -177,6 +179,16 @@ html.lenis {
   margin-right: 50px;
   gap: 2em;
   font-size: 20px;
+  display: none;
+}
+
+.navline {
+  position: fixed;
+  height: 1px;
+  top: 70px;
+  width: 0px;
+  background-color: #000000;
+  transition: all 0.5s linear;
 }
 
 /* Home */
@@ -193,16 +205,21 @@ html.lenis {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   height: 70%;
   width: 80%;
-  border-left: 1px solid var(--primary);
+  border-bottom: 1px solid var(--primary);
   font-family: var(--poppins);
 }
 
-.home-container svg {
-  height: 350px;
-  width: 350px;
-  margin-left: 100px;
+.home-container .svg {
+  height: 200px;
+  width: 200px;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .title-container {
@@ -211,24 +228,58 @@ html.lenis {
 }
 
 .title-container .title {
-  font-size: 120px;
+  font-size: 50px;
 }
 
 .title-container .subtitle {
   margin-left: auto;
-  font-size: 30px;
+  font-size: 15px;
 }
 
-@media (max-width: 1024px) {
-  .home-container svg {
+.pitch {
+  font-family: var(--montserrat);
+  font-size: 10px;
+}
+
+@media (min-width: 768px) {
+  .navlinks {
+    display: flex;
+  }
+
+  .home-container {
+    flex-direction: row;
+
+    border-bottom: 0px solid var(--primary);
+    border-left: 1px solid var(--primary);
+    font-family: var(--poppins);
+  }
+
+  .home-container .svg {
     height: 250px;
     width: 250px;
+    margin-top: 0px;
     margin-left: 50px;
   }
 
-  .title-container {
-    display: flex;
-    flex-direction: column;
+  .title-container .title {
+    font-size: 70px;
+  }
+
+  .title-container .subtitle {
+    font-size: 20px;
+  }
+
+  .pitch {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .home-container .svg {
+    height: 300px;
+    width: 300px;
+    margin-top: 0px;
+    margin-left: 50px;
   }
 
   .title-container .title {
@@ -236,7 +287,47 @@ html.lenis {
   }
 
   .title-container .subtitle {
-    margin-left: auto;
-    font-size: 25px;
+    font-size: 30px;
   }
+
+  .pitch {
+    font-size: 20px;
+  }
+}
+
+/* Works */
+
+.works {
+  min-height: 100vh;
+  width: 100vw;
+  display: flex;
+}
+
+.work-list {
+  position: sticky;
+  top: 80px;
+  height: 100%;
+  width: 40vw;
+  margin-right: 10px;
+}
+
+.work-title {
+  font-family: var(--montserrat);
+  font-size: 15px;
+  margin: 15px 5px;
+}
+
+.showcase-container {
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--primary);
+  margin-right: 10px;
+}
+
+.showcase img {
+  width: 80%;
+  object-fit: contain;
+  margin: 10px 10px;
+  border: 1px solid #000000;
+  padding: 10px;
 }
