--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ html.lenis {
   position: fixed;
   background-color: var(--bg);
   top: 0;
+  z-index: 100;
 }
 
 .navbar img {
@@ -308,7 +309,12 @@ html.lenis {
   height: 100vh;
   width: 100vw;
   object-fit: cover;
-  /* object-position: 0% 0%; */
+}
+
+@media (min-width: 1024px) {
+  .bg-1 img {
+    object-position: 0% 0%;
+  }
 }
 
 /* Works */
@@ -395,3 +401,22 @@ html.lenis {
 }
 
 /* about */
+
+.about {
+  margin-top: 25vh;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.square {
+  transform: rotate(45deg);
+}
+
+.square img {
+  height: 200px;
+  width: 200px;
+  object-fit: contain;
+}
