--- a/style.css
+++ b/style.css
@@ -154,18 +154,26 @@ html.lenis {
   --primary: #000000;
 }
 
+.body-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /* Navbar */
 
 .navbar {
   height: 70px;
-  width: 100vw;
+  width: 95vw;
   font-family: var(--poppins);
   display: flex;
   align-items: center;
   position: fixed;
   background-color: var(--bg);
-  top: 0;
-  z-index: 100;
+  top: 10px;
+  z-index: 10;
+  border: 1px solid #000000;
+  box-shadow: rgba(0, 0, 0) 7px 7px;
 }
 
 .navbar img {
@@ -176,70 +184,66 @@ html.lenis {
 
 .navlinks {
   display: flex;
-  margin-left: auto;
+  margin-right: auto;
   margin-right: 50px;
-  gap: 2em;
-  font-size: 20px;
+  gap: 0.5em;
+  font-size: 40px;
+  display: none;
+  font-weight: 900;
+  user-select: none;
+}
+
+.navlink {
+  cursor: pointer;
+}
+
+.menu-bar {
+  display: flex;
+  margin-left: auto;
+  z-index: 30;
+  cursor: pointer;
+  mix-blend-mode: difference;
+}
+
+#toggle {
   display: none;
 }
 
-.navline {
-  position: fixed;
-  height: 1px;
-  top: 70px;
-  width: 0px;
-  background-color: #000000;
-  transition: all 0.5s linear;
+label > span {
+  rotate: 0deg;
+  transition: all 200ms;
 }
 
-/* Home */
+#toggle:checked + label > span {
+  rotate: 45deg;
+}
 
-.home {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+#toggle:checked ~ .menu__section {
+  transform: translateX(0);
+}
+
+.menu__section {
   height: 100vh;
+  background-color: #000000;
+  z-index: 20;
   width: 100vw;
-}
-
-.home-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  height: 70%;
-  width: 80%;
-  border-bottom: 1px solid var(--primary);
-  font-family: var(--poppins);
-}
-
-.home-container .svg {
-  height: 200px;
-  width: 200px;
-  margin-top: 50px;
+  left: -100px;
+  position: fixed;
+  transform: translateX(100%);
+  transition: all 0.4s ease-out;
+  padding-left: 150px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  color: #ffffff;
+  margin-top: calc(100vh - 92px);
+  padding-top: 200px;
+  font-size: 60px;
 }
 
-.title-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.title-container .title {
-  font-size: 50px;
-}
-
-.title-container .subtitle {
-  margin-left: auto;
-  font-size: 15px;
-}
-
-.pitch {
-  font-family: var(--montserrat);
-  font-size: 10px;
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+  user-select: none;
+  color: #ffffff;
 }
 
 @media (min-width: 768px) {
@@ -247,176 +251,33 @@ html.lenis {
     display: flex;
   }
 
-  .home-container {
-    flex-direction: row;
-
-    border-bottom: 0px solid var(--primary);
-    border-left: 1px solid var(--primary);
-    font-family: var(--poppins);
+  .menu-bar {
+    display: none;
   }
 
-  .home-container .svg {
-    height: 250px;
-    width: 250px;
-    margin-top: 0px;
-    margin-left: 50px;
+  .menu__section {
+    display: none;
   }
-
-  .title-container .title {
-    font-size: 70px;
-  }
-
-  .title-container .subtitle {
-    font-size: 20px;
-  }
-
-  .pitch {
-    font-size: 15px;
+  .background-blur {
+    display: none;
   }
 }
 
-@media (min-width: 1024px) {
-  .home-container .svg {
-    height: 300px;
-    width: 300px;
-    margin-top: 0px;
-    margin-left: 50px;
-  }
+/* HOME */
 
-  .title-container .title {
-    font-size: 100px;
-  }
-
-  .title-container .subtitle {
-    font-size: 30px;
-  }
-
-  .pitch {
-    font-size: 20px;
-  }
+.home {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
 }
 
-/* Bg-1*/
-
-.bg-1 {
+.home__container {
   height: 50vh;
-  width: 100vw;
-  overflow: hidden;
-  object-fit: contain;
-}
-
-.bg-1 img {
-  height: 100vh;
-  width: 100vw;
-  object-fit: cover;
-}
-
-@media (min-width: 1024px) {
-  .bg-1 img {
-    object-position: 0% 0%;
-  }
-}
-
-/* Works */
-
-.works {
-  min-height: 100vh;
-  width: 100vw;
-  display: flex;
-  margin-top: 20vh;
-}
-
-.work-list {
-  position: sticky;
-  top: 80px;
-  height: 100%;
-  width: 20vw;
-  margin: 0 10px 0 20px;
-}
-
-.work-title {
-  font-family: var(--montserrat);
-  font-size: 13px;
-  margin: 15px 5px;
-  cursor: pointer;
-  text-align: end;
-}
-
-.showcase-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.showcase {
-  border: 1px solid var(--primary);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 90%;
-  height: 100%;
-}
-
-.showcase img {
-  width: 80%;
-  object-fit: contain;
-  margin: 10px;
+  width: 80vw;
   border: 1px solid #000000;
-  padding: 10px;
-}
-
-@media (min-width: 768px) {
-  .showcase img {
-    margin: 20px;
-  }
-
-  .work-title {
-    font-size: 18px;
-  }
-
-  .showcase {
-    width: 80%;
-  }
-
-  .showcase img {
-    width: 90%;
-  }
-}
-
-@media (min-width: 1024px) {
-  .showcase img {
-    width: 90%;
-  }
-
-  .work-title {
-    font-size: 20px;
-  }
-
-  .showcase {
-    width: 60%;
-    height: 100%;
-  }
-}
-
-/* about */
-
-.about {
-  margin-top: 25vh;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.square {
-  transform: rotate(45deg);
-}
-
-.square img {
-  height: 200px;
-  width: 200px;
-  object-fit: contain;
+  margin-top: 100px;
+  box-shadow: rgba(0, 0, 0) 7px 7px;
+  background-color: #0d1282;
+  color: #ffffff;
 }
